kubernetes/applications/homepage/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: homepage
  namespace: homepage
  labels:
    # Expose Homepage service via Cilium/BGP-announced LoadBalancer
    bgp.cilium.io/ip-pool: default
    bgp.cilium.io/advertise-service: default

spec:
  selector:
    app.kubernetes.io/name: homepage
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
